# pdm_hello_world

./: Dockerfile  README.md  docker-compose.yaml  hello.py  pyproject.toml  shell.nix
src/pdm_hello_world/: .hello_world.py.swp  hello_world.py
tests/: hello_test.py
