[project]
name = "pdm_hello_world"
version = "0.1.0"
description = "Hello World With PDM Package Manager"
authors = [
    {name = "yosephbernandus", email = "yosephbernandus@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
